Closed Bug 1787122 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList]

Categories

(Core :: Networking, defect)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 + fixed

People

(Reporter: aryx, Assigned: edgul)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

14 reports from 8+ installations on all desktop operating systems.

Crash report: https://crash-stats.mozilla.org/report/index/64e3cde4-2270-4c2a-b0bc-fc8150220825

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (NS_SUCCEEDED(CookieCommons::GetBaseDomain(mTLDService, uri, baseDomain, requireAHostMatch)))

Top 10 frames of crashing thread:

0 libxul.so mozilla::net::CookieServiceParent::UpdateCookieInContentList netwerk/cookie/CookieServiceParent.cpp:138
1 libxul.so mozilla::net::CookieServiceParent::TrackCookieLoad netwerk/cookie/CookieServiceParent.cpp:116
2 libxul.so mozilla::dom::ContentParent::AboutToLoadHttpFtpDocumentForChild dom/ipc/ContentParent.cpp:6211
3 libxul.so mozilla::net::HttpChannelParent::OnStartRequest netwerk/protocol/http/HttpChannelParent.cpp:1073
4 libxul.so mozilla::net::DocumentLoadListener::FinishReplacementChannelSetup netwerk/ipc/DocumentLoadListener.cpp:1245
5 libxul.so {virtual override thunk} 
6 libxul.so mozilla::MozPromise<bool, nsresult, false>::ThenValue<mozilla::net::HttpChannelParent::ContinueVerification xpcom/threads/MozPromise.h:846
7 libxul.so mozilla::MozPromise<bool, nsresult, false>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:487
8 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:851
9 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1205
Flags: needinfo?(edgul)
Assignee: nobody → edgul
Flags: needinfo?(edgul)

Just stumbled upon this. Here's a testcase:

<script>
window.location = "http://a...example.com/"
</script>

(IMO looks somewhat severe because essentially a fairly common typo may unexpectedly crash the parent.)

See Also: → 1787326

Copying crash signatures from duplicate bugs.

Crash Signature: [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList] → [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList] [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList(nsIURI*, mozilla::OriginAttributes const&)]
Crash Signature: [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList] [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList(nsIURI*, mozilla::OriginAttributes const&)] → [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList] [@ mozilla::net::CookieServiceParent::UpdateCookieInContentList(nsIURI*, mozilla::OriginAttributes const&)]
See Also: → 1788080
Pushed by eguloien@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b27d9c0f5596
Fixed assert crash when attempting to get base domain from a malformed URL. r=kershaw
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: