Bug 1787122 - Fixed assert crash when attempting to get base domain from a malformed URL. r=kershaw

Testing will be completed in: https://bugzilla.mozilla.org/show_bug.cgi?id=1788080

Differential Revision: https://phabricator.services.mozilla.com/D155878